; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/can/extr_pch_can.c_pch_can_set_rx_all.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/can/extr_pch_can.c_pch_can_set_rx_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pch_can_priv = type { i32 }

@PCH_RX_OBJ_START = common dso_local global i32 0, align 4
@PCH_RX_OBJ_END = common dso_local global i32 0, align 4
@PCH_RX_IFREG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pch_can_priv*, i32)* @pch_can_set_rx_all to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pch_can_set_rx_all(%struct.pch_can_priv* %0, i32 %1) #0 {
  %3 = alloca %struct.pch_can_priv*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.pch_can_priv* %0, %struct.pch_can_priv** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @PCH_RX_OBJ_START, align 4
  store i32 %6, i32* %5, align 4
  br label %7

7:                                                ; preds = %17, %2
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @PCH_RX_OBJ_END, align 4
  %10 = icmp sle i32 %8, %9
  br i1 %10, label %11, label %20

11:                                               ; preds = %7
  %12 = load %struct.pch_can_priv*, %struct.pch_can_priv** %3, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @PCH_RX_IFREG, align 4
  %16 = call i32 @pch_can_set_rxtx(%struct.pch_can_priv* %12, i32 %13, i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %11
  %18 = load i32, i32* %5, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %5, align 4
  br label %7

20:                                               ; preds = %7
  ret void
}

declare dso_local i32 @pch_can_set_rxtx(%struct.pch_can_priv*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
